🤖 Trying to fix the horizontal scroll in Android

--- a/src/site/_includes/postcss/component/Header.css
+++ b/src/site/_includes/postcss/component/Header.css
@@ -62,7 +62,7 @@
   }
 
   @media (max-width: $midMax) {
-    position: absolute;
+    position: fixed;
     height: 100%;
     left: 100%;
     width: calc(100% - 6em);
